--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
     "dev": "node --watch server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
